[package]
name = "network-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.4"
etherparse = "0.14"
hex = "0.4"
criterion = "0.5.1"

[[bench]]
name = "hash_benchmark"
harness = false
